@@ -1,3 +1,7 @@
+2025-01-25         Manuel Collado        <m-collado@users.sourceforge.net>
+
+	* Development_web: Document support of awk source files as document files.
+
 2025-01-07         Manuel Collado        <m-collado@users.sourceforge.net>
 
 	* webTOC: Upload also 'texihtml.css' stylesheet to the project web.
